overflow fix

--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ label {
 }
 
 #contact {
+  height: 160vh;
   padding-top: 70em;
 }
 
